--- a/.eslintrc
+++ b/.eslintrc
@@ -16,7 +16,7 @@
     "no-unused-vars": [
       1,
       {
-        "argsIgnorePattern": "res|next|^err"
+        "argsIgnorePattern": "res|next|^err|^_"
       }
     ],
     "arrow-body-style": [2, "as-needed"],
@@ -27,6 +27,7 @@
       }
     ],
     "no-console": 0,
+    "no-var": 1,
     "import/prefer-default-export": 0,
     "import": 0,
     "func-names": 0,
